# ghost-assistant

./: .gitignore  README.md  debug_ax.py  debug_events.py  debug_ocr.py  debug_overlay.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
esp32/ai_receiver/: ai_receiver.ino
src/: app.ts  server.ts
src/opp_server/: __init__.py  ai_assistant.py  ax_reader.py  event_monitor.py  main.py  ocr_reader.py  output_stream.py  overlay.py  pipeline.py  watcher.py
tests/: test_ax_reader.py  test_smoke.py
